Added code to create order header and lines

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,7 +30,6 @@ i.icon-large {
     font-weight: 600;
 }
 
-.page-title {
-    position: relative;
-    top:
+.field-label {
+    font-weight: 600;
 }
