--- a/www/views/vendor-details.html
+++ b/www/views/vendor-details.html
@@ -13,7 +13,7 @@
                 <p>
                     {{ vendor.description.line3 }}
                 </p>
-                <button class="button button-block button-positive" ng-click="makeOrder()">Make an order</button>
+                <button class="button button-block button-positive" ng-click="newOrder()">Make an order</button>
             </div>
              <div class="item tabs tabs-secondary tabs-icon-top no-border">
                 <a class="tab-item pad-5-bottom" href="#">
