--- a/www/views/main.html
+++ b/www/views/main.html
@@ -1,19 +1,19 @@
 <ion-nav-bar class="bar-balanced">
-    <ion-nav-back-button class="button-clear">
-        <i class="ion-arrow-left-c"></i>
-    </ion-nav-back-button>
 </ion-nav-bar>
-<ion-tabs class="tabs-stable">
 
-    <ion-tab icon="ion-home" ui-sref="app.home">
-        <ion-nav-view name="home"></ion-nav-view>
-    </ion-tab>
+<ion-nav-view></ion-nav-view>
 
-    <ion-tab icon="ion-earth" ui-sref="app.find">
-        <ion-nav-view name="find"></ion-nav-view>
-    </ion-tab>
+<!--<ion-tabs class="tabs-stable">-->
 
-    <ion-tab icon="ion-card" ui-sref="app.order">
-        <ion-nav-view name="orders"></ion-nav-view>
-    </ion-tab>
-</ion-tabs>
+    <!--<ion-tab icon="ion-home" ui-sref="app.home">-->
+        <!--<ion-nav-view name="home"></ion-nav-view>-->
+    <!--</ion-tab>-->
+
+    <!--<ion-tab icon="ion-earth" ui-sref="app.find">-->
+        <!--<ion-nav-view name="find"></ion-nav-view>-->
+    <!--</ion-tab>-->
+
+    <!--<ion-tab icon="ion-card" ui-sref="app.order">-->
+        <!--<ion-nav-view name="orders"></ion-nav-view>-->
+    <!--</ion-tab>-->
+<!--</ion-tabs>-->
