--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,12 +1,43 @@
 <ion-view title="<span class='title-text'>iBartender</span><img src='img/Bartender256.png' class='title_img' />">
-    <ion-content padding="true">
-        <h3>Hi Steve</h3>
-        <h4>Your current orders</h4>
-        <div class="list list-inset">
-            <a class="item" href="#" ng-repeat="order in orders" ui-sref="app.order.summary({orderId:order.id})">
-                <span class="item-note">{{ order.order_status_name }}</span>
-                {{ order.order_number }}
-            </a>
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-header-bar class="bar bar-subheader bar-stable">
+        <h4 class="drinkon-subtitle">Homepage</h4>
+    </ion-header-bar>
+    <ion-content class="padding has-header">
+        <div class="list">
+            <div class="item item-divider">
+                Notifications
+            </div>
+            <div class="item item-small-text">
+                You have no notifications
+            </div>
+        </div>
+        <div class="list">
+            <div class="item item-divider">
+                Find a Venue
+            </div>
+            <div class="item">
+                <div class="drinkon-button-row">
+                    <button class="button button-balanced button-small icon-left ion-arrow-shrink">Nearby</button>
+                    <button class="button button-balanced button-small icon-left ion-heart">Favourites</button>
+                    <button class="button button-balanced button-small icon-left ion-map" ui-sref="app.vendor.locationSearch">By Location</button>
+                </div>
+            </div>
+        </div>
+        <div class="list">
+            <div class="item item-divider">
+                Current Orders
+            </div>
+            <div class="list">
+                <div class="item">
+                        <a class="item item-small-text" href="#" ng-repeat="order in orders" ui-sref="app.order.summary({orderId:order.id})">
+                            <span class="item-note">{{ order.order_status_name }}</span>
+                            {{ order.order_total | currency:"£" }} @ {{ order.vendor_name }}
+                        </a>
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
