--- a/www/views/auth/register.html
+++ b/www/views/auth/register.html
@@ -1,4 +1,4 @@
-<ion-view title="<span class='title-text'>iBartender</span><img src='img/Bartender256.png' class='title_img' />">
+<ion-view title="<span class='title-text'>preOrder</span><img src='img/Bartender256.png' class='title_img' />">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
