--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,6 +1,9 @@
-<ion-view title="<span class='title-text'>iBartender</span><img src='img/Bartender256.png' class='title_img' />">
+<ion-view title="{{ appHeader }}">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+        <button class="button button-icon icon ion-more" ng-click="userPopover.show($event)"></button>
     </ion-nav-buttons>
     <ion-header-bar class="bar bar-subheader bar-stable">
         <h4 class="drinkon-subtitle">{{ getGreeting() }}</h4>
