--- a/www/views/auth/login-modal.html
+++ b/www/views/auth/login-modal.html
@@ -14,7 +14,7 @@
             </label>
             <div class="warning-message" ng-show="!!message">{{message}}</div>
             <div class="padding drinkon-button-row">
-                <button class="button button-positive" ng-click="login()">Login</button>
+                <button class="button button-balanced" ng-click="login()">Login</button>
                 <button class="button button-stable" ng-click="cancel()">Cancel</button>
             </div>
         </form>
