--- a/www/views/orders/order-product-count.html
+++ b/www/views/orders/order-product-count.html
@@ -1,4 +1,10 @@
-<ion-view title="<span class='title-text'>iBartender</span><img src='img/bartender256.png' class='title_img' />">
+<ion-view title="{{ appHeader }}">
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+        <button class="button button-icon icon ion-more" ng-click="userPopover.show($event)"></button>
+    </ion-nav-buttons>
     <ion-content padding="true">
         <h4 class="text-center page-title">How Many?</h4>
         <div class="list list-inset">
