--- a/www/views/orders/order-product-measure.html
+++ b/www/views/orders/order-product-measure.html
@@ -5,8 +5,11 @@
     <ion-nav-buttons side="right">
         <button class="button button-icon icon ion-more" ng-click="userPopover.show($event)"></button>
     </ion-nav-buttons>
-    <ion-content padding="true">
-        <h4 class="text-center page-title">Choose a Measure</h4>
+    <ion-content>
+        <img class="page-title-image" src="img/vendor-products.png">
+        <div class="page-title">
+            Choose a Measure
+        </div>
         <div class="list list-inset">
             <a class="item" href="#" ng-repeat="measure in product.measures | orderBy:'unitPrice'" ui-sref="app.order.edit.count({typeId:productType.id, productId:product.id, measureId: measure.id})">
                 {{ measure.name }}
